vbnc/vbnc/tests/Errors/30311-44.vb
Class Date1
    Public Shared Function Main() As Integer
        Dim a As UInteger = TimeSpan.FromSeconds(1)
    End Function
End Class